objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <description>Default lead process needed for lead record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disqualify</fullName>
        </values>
        <values>
            <fullName>Pre-Sales Qualified</fullName>
        </values>
        <values>
            <fullName>Pre-Sales Working</fullName>
        </values>
        <values>
            <fullName>Prioritized</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>SFDC1-45- to get the Account Name</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2101 This tells users whether or not an account has been requested for the lead. This is a read-only field and should only be updated by automated process.</description>
        <label>Account Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -105, Look up field for a related Account
SFDC1-9938: Added help text</description>
        <inlineHelpText>This is the account record associated to the Company Name. If a new Account is requested from the lead, this field will be populated once the case to request the new account is marked as closed complete.</inlineHelpText>
        <label>Requested Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Account must be active to be associated to lead.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <description>SFDc1- 105; Picklist field for Authority</description>
        <inlineHelpText>Contact&apos;s Autority Level in buying process.</inlineHelpText>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am responsible</fullName>
                </value>
                <value>
                    <fullName>I can suggest but will require approval</fullName>
                </value>
                <value>
                    <fullName>I am not involved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetRange__c</fullName>
        <description>SFDC1-551; This field represent budget for a Lead which on conversion populate same field on opportunity
SFDC-1103</description>
        <inlineHelpText>Amount that has been set aside for purchase.</inlineHelpText>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 25,000</fullName>
                </value>
                <value>
                    <fullName>25,000-50,000</fullName>
                </value>
                <value>
                    <fullName>50,000-100,000</fullName>
                </value>
                <value>
                    <fullName>100,000 - 500,000</fullName>
                </value>
                <value>
                    <fullName>500,000 - 1,000,000</fullName>
                </value>
                <value>
                    <fullName>&gt; 1,000,000</fullName>
                </value>
                <value>
                    <fullName>&gt; 100,000</fullName>
                    <isActive>false</isActive>
                    <label>&gt; 100,000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>SFDC1 -105 ; Picklist value for Budget of a lead/contact</description>
        <inlineHelpText>Budget availability.</inlineHelpText>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funding has been secured</fullName>
                </value>
                <value>
                    <fullName>Funding will require approval</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLineInterest__c</fullName>
        <description>SFDC1-1033</description>
        <inlineHelpText>Sales/Marketing BL that product of interest falls under.</inlineHelpText>
        <label>Business Line Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIRef_Account_Country__c</fullName>
        <description>US-3861071:DO NOT MODIFY/DELETE. CI Referral package field. Informatica will insert the country of the account referred.</description>
        <label>Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIRef_Account_State_Province__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELETE. Part of CI referral package. Informatica inserts the state/province of account referred.</description>
        <label>Account State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIRef_Disqualified_Reason_Other_Notes__c</fullName>
        <description>US-3861156: DO NOT MODIFY/DELETE. CI Referral package field. Field is required if &quot;other&quot; is selected as lead disqualified reason.</description>
        <inlineHelpText>If lead disqualified reason is &quot;Other&quot;, provide a brief explanation.</inlineHelpText>
        <label>Disqualified Reason Other Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedRegion__c</fullName>
        <description>SFDC1-1760 : This Calculated Region field is populated based on the value of the Region picklist in Country custom object</description>
        <formula>TEXT(Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region in which contact is located</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDispositionedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1760 - To track the user who called for Disposition</description>
        <inlineHelpText>Colleague who completed qualification process.</inlineHelpText>
        <label>Call Dispositioned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CallDispositionedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallProspectProfiler__c</fullName>
        <description>SFDC1- 105: URL for prospect profiler ; SFDC1-4975: Call Prospect Profiler field will build a URL which will provide access to the Prospect profiler information in Eloqua.</description>
        <formula>HYPERLINK(&quot;https://login.eloqua.com/cvp?LoginPrefix=IHSE&amp;Username=Profiler.User&amp;Password=999645ce-a4ad-472d-9255-59602b503e98,DE1FF21F17416652504F15E859ACB2CA69D4BB52BCC14C633D97A0645D1BC7D6C99CD3AC92492336029C210AF9252AED67F6C18E3FF99DE34E67D53D9A9BA5BB36469BCB3C338CD697FFAB0194E17E25&amp;Url=apps/profiler/index.aspx?emailAddress=&quot;&amp; Email,&quot;Click here for Prospect Profiler Info&quot;)</formula>
        <inlineHelpText>Provides insight to Contacts interactions with IHSM</inlineHelpText>
        <label>Prospect Profiler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallToActionType__c</fullName>
        <description>SFDC1- 105; A text field describes about action of a lead</description>
        <inlineHelpText>Indicates the type of form the Contact filled out.</inlineHelpText>
        <label>Call-To-Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Analyst/Expert</fullName>
                </value>
                <value>
                    <fullName>Contact Sales or Request Quote/Exploratory Meeting</fullName>
                </value>
                <value>
                    <fullName>Contact Us Request</fullName>
                </value>
                <value>
                    <fullName>Internal Form Submission - Hot</fullName>
                </value>
                <value>
                    <fullName>Request Free Trial or Demo</fullName>
                </value>
                <value>
                    <fullName>Analyst/Research Submissions</fullName>
                </value>
                <value>
                    <fullName>Internal Form Submission</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Download Sample Report/Data/Map</fullName>
                </value>
                <value>
                    <fullName>Download Whitepaper/Case Study</fullName>
                </value>
                <value>
                    <fullName>Internal Form Submission - Cool</fullName>
                </value>
                <value>
                    <fullName>Watch Recorded Webcast</fullName>
                </value>
                <value>
                    <fullName>Event Registration</fullName>
                </value>
                <value>
                    <fullName>Newsletter Subscribe</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallbackDate__c</fullName>
        <description>SFDC1- 105; Call back date for client</description>
        <inlineHelpText>Date of next scheduled call.</inlineHelpText>
        <label>Callback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallingCountryCode__c</fullName>
        <description>SFDC1- 105 ; Country code of contact , Ex - +44 (UK)</description>
        <inlineHelpText>Calling Country/Territory code for the Contact.</inlineHelpText>
        <label>Calling Country/Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <description>Custom text field in Outreach for Leads</description>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignNumber__c</fullName>
        <description>Custom text field in Outreach for Leads</description>
        <label>Latest Campaign Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignType__c</fullName>
        <description>SFDC1-9504 Auto-populated via Eloqua during lead insertion based on Campaign the lead is associated it.</description>
        <inlineHelpText>Auto-populated via Eloqua during lead insertion based on Campaign the lead is associated it.</inlineHelpText>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3105 - Add &quot;Competitor&quot; look-up when Disqualified Reason is &quot;Competition&quot;</description>
        <inlineHelpText>Please populate the name of Competitor</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Competitor)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1- 105; Lookup field for associated contact</description>
        <inlineHelpText>Please populate from associated Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConversionDate__c</fullName>
        <description>SFDC1- 105; Date field for Conversion of a lead</description>
        <inlineHelpText>Reflects the date the Lead was converted.</inlineHelpText>
        <label>Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConvertedFromCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2377 - to Check the lead is converted from Custom Solution</description>
        <label>Converted From Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-1081 Country lookup field to enforce prohibited country validations.
SFDC1-7580 - Country isn&apos;t Required for Lead Creation.</description>
        <inlineHelpText>Country/Territory of Contact.</inlineHelpText>
        <label>Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <description>SFDC1-2305; Hidden field needed for Lead source update</description>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Person who created the Lead.</inlineHelpText>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDispositioned__c</fullName>
        <description>SFDC1-105; Date field for dis positioned</description>
        <inlineHelpText>Date qualification was completed.</inlineHelpText>
        <label>Date Dispositioned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialResult__c</fullName>
        <description>SFDC1-1033</description>
        <label>Dial Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisqualifedReason__c</fullName>
        <description>SFDC1-105; Picklist value available for lead disqualification
SFDC1-9607: Added a picklist value
SFDC-2335 Added new picklist values
SFDC-5640 - Add new disqualification reason in &quot;Lead&quot; object</description>
        <inlineHelpText>Reason Lead is not valid.</inlineHelpText>
        <label>Disqualifed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(Nurture) Budget</fullName>
                </value>
                <value>
                    <fullName>(Nurture) Prospect-Future Interest</fullName>
                </value>
                <value>
                    <fullName>Already Prospecting</fullName>
                </value>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Company is too small to be Rated</fullName>
                </value>
                <value>
                    <fullName>Company Too Small</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Contact Non Responsive/Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Division Transfer</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Existing Lead</fullName>
                </value>
                <value>
                    <fullName>Duplicate Lead</fullName>
                </value>
                <value>
                    <fullName>Expired Lead (Not for Manual Selection)</fullName>
                </value>
                <value>
                    <fullName>IHSM Decision to Pass/No Bid</fullName>
                </value>
                <value>
                    <fullName>Invalid/Test Data</fullName>
                </value>
                <value>
                    <fullName>Marketing Tracking Purpose Only - No Action Required</fullName>
                </value>
                <value>
                    <fullName>No Action Taken</fullName>
                </value>
                <value>
                    <fullName>No Budget at this time</fullName>
                </value>
                <value>
                    <fullName>No further interest, has all information needed</fullName>
                </value>
                <value>
                    <fullName>No solution to offer</fullName>
                </value>
                <value>
                    <fullName>Not able to contact</fullName>
                </value>
                <value>
                    <fullName>Not good candidate (i.e., student, individual investor)</fullName>
                </value>
                <value>
                    <fullName>Not the Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passed to Consultant</fullName>
                </value>
                <value>
                    <fullName>Passed to Customer Care</fullName>
                </value>
                <value>
                    <fullName>Product/Solution does not match need</fullName>
                </value>
                <value>
                    <fullName>Prospect didn&apos;t want to buy</fullName>
                </value>
                <value>
                    <fullName>Time frame too far out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_Referred_From__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELETE. CI Referral package field. Informatica will populate with the name of the source org division.</description>
        <inlineHelpText>This is the division that submitted the referral lead.</inlineHelpText>
        <label>Division Referred From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Sent_To__c</fullName>
        <description>US-4261726: Tracks the division the lead is being sent to, specifically for IHS Markit because all divisions exist in one Salesforce org.</description>
        <label>Division Sent To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Transferred_To__c</fullName>
        <description>Tracks which division the lead was transferred to so validation can be run to prevent the lead from being transferred again.</description>
        <label>Division Transferred To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElqProspectID__c</fullName>
        <description>SFDC1- 105; Text field for  EloqProspect ID</description>
        <inlineHelpText>Eloqua ID Unique to Contact</inlineHelpText>
        <label>ElqProspectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2398; A checkbox field for lead</description>
        <label>Email Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeBand__c</fullName>
        <description>SFHD1- 105; The field suggests different Market value/band for a lead/contact</description>
        <inlineHelpText>Size of company based on # of employees.</inlineHelpText>
        <label>Employee Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                    <label>Small (1-99)</label>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                    <label>Mid-Market (100-999)</label>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                    <label>Enterprise (1000+)</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Enterprise(Office: 1000+)</fullName>
                    <isActive>false</isActive>
                    <label>Enterprise (Office: 1000+)</label>
                </value>
                <value>
                    <fullName>Mid-Market(DepartmentStore:100-999)</fullName>
                    <isActive>false</isActive>
                    <label>Mid-Market (Department Store: 100-999)</label>
                </value>
                <value>
                    <fullName>Small(School: 1-99)</fullName>
                    <isActive>false</isActive>
                    <label>Small (School: 1-99)</label>
                </value>
                <value>
                    <fullName>Unknown(House)</fullName>
                    <isActive>false</isActive>
                    <label>Unknown (House)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExistingBLCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8394: Boolean field to set to true if customer is an Existing BL Customer</description>
        <inlineHelpText>Existing BL Customer</inlineHelpText>
        <label>Existing BL Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingIHSMarkitCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8394: Boolean field to check if customer is an existing IHS Markit Customer</description>
        <inlineHelpText>Existing IHS Markit Customer</inlineHelpText>
        <label>Existing IHS Markit Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFCD1- 105 ; Lookup field for associated existing opportunity</description>
        <inlineHelpText>Select if you would like to associate this lead to an existing opportunity.</inlineHelpText>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads (Existing Opportunity)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Lead_ID__c</fullName>
        <description>US-3905084: Unique key for matching referral record to HUB lead for syncing data.</description>
        <externalId>true</externalId>
        <label>External Lead ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldSales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8394: True if customer should be reached in person</description>
        <inlineHelpText>True if customer should be reached in person</inlineHelpText>
        <label>Field Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstNameNative__c</fullName>
        <description>SFDC-5038 - Outreach Field to capture Local Language equivalent for names</description>
        <inlineHelpText>This field populates the local language equivalent for the customer first name</inlineHelpText>
        <label>First Name (Native)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstSalesRepQueueAssignment__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>First Sales Rep/Queue Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstTouchPreSales__c</fullName>
        <description>SFDC1-1759  &apos;First Touch - Pre-Sales&apos; - Read-only, for reporting purposes only</description>
        <inlineHelpText>Date Sales began working the lead.</inlineHelpText>
        <label>First Touch - Pre-Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstTouchSales__c</fullName>
        <description>SFDC1-1759 &apos;First Touch - Sales&apos; - read-only, for reporting purposes only</description>
        <inlineHelpText>Date Pre Sales began working the lead.</inlineHelpText>
        <label>First Touch - Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>SFHD1- 105; Functional area of a lead/contact</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development/Sales</fullName>
                </value>
                <value>
                    <fullName>C-Suite Executives</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>Economist</fullName>
                </value>
                <value>
                    <fullName>Environmental Health Safety Sustainability</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Exploration &amp; Production</fullName>
                </value>
                <value>
                    <fullName>Financial/Investment</fullName>
                </value>
                <value>
                    <fullName>Geology</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Librarian</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Product/Project Management</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Strategic Planning</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Option Value</fullName>
                    <isActive>false</isActive>
                    <label>Option Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IHS_HR_Sub_Business_Line__c</fullName>
        <description>US-4808045: Migrates IHS HR Sub Business Line from user record to SPG Referral when created.</description>
        <inlineHelpText>Tracks HR Sub Business Line for IHS divisions only.</inlineHelpText>
        <label>IHS HR Sub Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHS_Subject_Matter_Expert__c</fullName>
        <description>US-4585846: Tags SME from account team to referral.</description>
        <inlineHelpText>Tracks SME on account team.</inlineHelpText>
        <label>IHS Subject Matter Expert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifiedTargetedWhiteSpace__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8394: True if customer responded to WhiteSpace</description>
        <inlineHelpText>Identified Targeted WhiteSpace</inlineHelpText>
        <label>Identified Targeted WhiteSpace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Sequence_Date__c</fullName>
        <label>Initial Sequence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsideSales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8394: True if customer should be reached by phone or online</description>
        <inlineHelpText>True if customer should be reached by phone or online</inlineHelpText>
        <label>Inside Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalLDNotes__c</fullName>
        <description>SFDC1- 105; Long Text field for notes</description>
        <inlineHelpText>Internal Notes field for Pre Sales.</inlineHelpText>
        <label>Internal LD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDCompletionStatus__c</fullName>
        <description>SFDC1-1033</description>
        <inlineHelpText>Result of Pre Sales follow up.</inlineHelpText>
        <label>LD Completion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDNotes__c</fullName>
        <description>SFDC1 - 105; Notes for progress of a lead</description>
        <inlineHelpText>Notes gathered during Pre-Sales call.</inlineHelpText>
        <label>LD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDScriptID__c</fullName>
        <description>SFDC1- 105; text field</description>
        <inlineHelpText>Script Associated to the Product indicated.</inlineHelpText>
        <label>LD Script ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDScriptScore__c</fullName>
        <description>SFDC1- 105; Text field for Script score</description>
        <inlineHelpText>Lead Score based on Pre Sales Activity.</inlineHelpText>
        <label>LD Script Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMTAssignmentTime__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between Pre-Sales Qualified status and the first Sales Rep/Queue assignment</inlineHelpText>
        <label>LMT Assignment Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastHour__c</fullName>
        <description>SFDC1-217 -- to Identify the past hour records for SLA</description>
        <formula>IF(
AND(
    CreatedDate &gt;= NOW(), 
    CreatedDate &lt;= NOW() -1/24 ),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Hour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastNameNative__c</fullName>
        <description>SFDC-5038 - Outreach Field to capture Local Language equivalent for names</description>
        <inlineHelpText>This field populates the local language equivalent for the customer last name</inlineHelpText>
        <label>Last Name (Native)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>